--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "vod platform containing food content",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test",
     "start": "node index.js"
   },
   "repository": {
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/ASJvine/vod/issues"
   },
-  "homepage": "https://github.com/ASJvine/vod#readme"
+  "homepage": "https://github.com/ASJvine/vod#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "lodash": "^4.17.2"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2"
+  }
 }
