--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha server/spec.js",
-    "start": "nodemon server/server.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
+    "colors": "^1.1.2",
     "mocha": "^3.1.2",
     "supertest": "^2.0.1",
     "webpack": "^1.13.3"
